[gd_scene load_steps=12 format=2]

[ext_resource path="res://death_screen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Menu_backgrounds/hand.png" type="Texture" id=2]
[ext_resource path="res://Projectile/fire/Flamethrower/light_32x32.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Menu_backgrounds/Sprite-0002.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Menu_backgrounds/MENUOVERLAYE2_black.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Menu_backgrounds/MENUOVERLAYER1.png" type="Texture" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Menu_buttons/menu_button-export1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Menu_buttons/Better_menu-expor_hovort.png" type="Texture" id=9]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[node name="death_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 72.0
margin_right = 72.0
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="flicker" type="Timer" parent="."]

[node name="black" type="Sprite" parent="."]
position = Vector2( 336, 270 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="Label2" type="Label" parent="."]
margin_left = 98.0
margin_top = 58.0
margin_right = 578.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 1 )
text = "You are dead"

[node name="Button" type="TextureButton" parent="."]
margin_left = 296.0
margin_top = 200.0
margin_right = 360.0
margin_bottom = 232.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 32, 0 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="Label" type="Label" parent="Button"]
margin_left = 7.0
margin_top = 2.0
margin_right = 207.0
margin_bottom = 102.0
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 1 )
text = "Retry"

[node name="Button2" type="TextureButton" parent="."]
margin_left = 300.0
margin_top = 356.0
margin_right = 364.0
margin_bottom = 388.0
rect_scale = Vector2( 5, 2.5 )
rect_pivot_offset = Vector2( 32, 0 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="Label" type="Label" parent="Button2"]
margin_left = 5.8
margin_top = 3.2
margin_right = 485.8
margin_bottom = 103.2
rect_scale = Vector2( 0.11, 0.25 )
custom_fonts/font = SubResource( 1 )
text = "Back to menu"

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 352, 262 )
scale = Vector2( 2, 1 )
texture = ExtResource( 3 )
texture_scale = 25.0

[node name="static" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.419608 )
position = Vector2( 336, 270 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="back" type="Sprite" parent="."]
position = Vector2( 336, 270 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="hand" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.607843 )
position = Vector2( 998, 64 )
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -20, -15 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( 350, 270 )
scale = Vector2( 18, 10 )
texture = ExtResource( 7 )

[connection signal="timeout" from="flicker" to="." method="_on_flicker_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
